--- a/css/index.css
+++ b/css/index.css
@@ -4,28 +4,46 @@ body{
   padding: 0;
   background-color: Gainsboro;
 }
-.banner{
+/*DIVS */
+#banner{
   margin: 0;
   margin-top: 60px;
   width: auto;
   height: 120px;
   background-color: white;
 }
+#slide{
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  background-color: transparent;
+
+}
+#sobre{
+  background-color: lightblue;
+}
+
+#galeria{
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: lightgreen;
+  text-align: center;
+}
+/*CLASS*/
 .imgbanner{
   width: 100%;
 	height: 100%;
 }
-
-.slide{
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-top: 10px;
-  background-color: transparent;
-  margin-bottom: 50px;
-}
-
 .centro{
   left: 20%;
+}
+.centrogaleria{
+  left:10%
+
 }
 .login{
   margin: 0;
@@ -45,12 +63,9 @@ a:hover{
   height: 400px;
 }
 .fundobranco{
-  background-color: white;
   background-color: transparent;
 }
-.sobre{
-  background-color: lightblue;
-}
+
 .escola{
   width: 150px;
   height: 150px;
