--- a/css/index.css
+++ b/css/index.css
@@ -25,24 +25,35 @@ body{
 }
 
 #galeria{
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 50px;
+  padding-right: 50px;
   padding-bottom: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
   background-color: lightgreen;
   text-align: center;
 }
+#footer{
+  background-color: darkblue;
+  color: white;
+}
+.links{
+  font-size: 20px;
+}
 /*CLASS*/
 .imgbanner{
   width: 100%;
 	height: 100%;
 }
+.patrocinador{
+  width: 50%;
+	height: 50%;
+}
 .centro{
   left: 20%;
 }
 .centrogaleria{
-  left:10%
+  left:8%;
 
 }
 .login{
