--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,12 @@ body{
   background-color: Gainsboro;
 }
 /*DIVS */
+#login{
+  margin: 0;
+  top: 5%;
+  position: absolute;
+  left:94%;
+}
 #banner{
   margin: 0;
   margin-top: 60px;
@@ -56,12 +62,7 @@ body{
   left:8%;
 
 }
-.login{
-  margin: 0;
-  top: 20%;
-  position: absolute;
-  left:94%;
-}
+
 
 a.nounderline{
   text-decoration: none;
